docs(css): 修正文档中图片路径和格式问题
修复文档中图片路径错误，统一使用相对路径
调整markdown表格和代码块格式，增强可读性

--- a/docs/courses/4.css属性/2.margin负值详解.md
+++ b/docs/courses/4.css属性/2.margin负值详解.md
@@ -4,29 +4,30 @@ title: margin负值详解
 date: 2024-11-06 21:07:23
 ---
 
-# margin负值详解
-> margin是CSS外补白，负值可使元素向内收缩，可用于元素定位、列表布局、等高列布局等场景。掌握margin负值，能设计出更灵活的网页布局。
+# margin 负值详解
 
-![MARGIN](../assets/img/courses/margin/4853363-ee8a754f54875841.png)
+> margin 是 CSS 外补白，负值可使元素向内收缩，可用于元素定位、列表布局、等高列布局等场景。掌握 margin 负值，能设计出更灵活的网页布局。
 
-## 先看看 margin {#先看看-margin} 
+![MARGIN](../../assets/img/courses/margin/4853363-ee8a754f54875841.png)
 
-> **margin（外边距）**：CSS盒模型中的重要组成部分，控制元素边框与其他元素之间的空间距离。理解margin的工作原理是掌握CSS布局的基础。
+## 先看看 margin {#先看看-margin}
 
-### margin的四个方向 {#margin的四个方向}
+> **margin（外边距）**：CSS 盒模型中的重要组成部分，控制元素边框与其他元素之间的空间距离。理解 margin 的工作原理是掌握 CSS 布局的基础。
 
-CSS允许我们分别控制元素四个方向的外边距：
+### margin 的四个方向 {#margin 的四个方向}
 
-| 方向 | 属性 | 描述 |
-|------|------|------|
-| 上边距 | `margin-top` | 控制元素上方的空间距离 |
+CSS 允许我们分别控制元素四个方向的外边距：
+
+| 方向   | 属性            | 描述                   |
+| ------ | --------------- | ---------------------- |
+| 上边距 | `margin-top`    | 控制元素上方的空间距离 |
 | 下边距 | `margin-bottom` | 控制元素下方的空间距离 |
-| 左边距 | `margin-left` | 控制元素左侧的空间距离 |
-| 右边距 | `margin-right` | 控制元素右侧的空间距离 |
+| 左边距 | `margin-left`   | 控制元素左侧的空间距离 |
+| 右边距 | `margin-right`  | 控制元素右侧的空间距离 |
 
-### margin的简写语法 {#margin的简写语法}
+### margin 的简写语法 {#margin 的简写语法}
 
-为了提高代码效率，CSS提供了margin的简写语法。根据提供的值数量不同，应用规则也不同。下面我们详细介绍四种简写方式：
+为了提高代码效率，CSS 提供了 margin 的简写语法。根据提供的值数量不同，应用规则也不同。下面我们详细介绍四种简写方式：
 
 #### 1. 四个值（上、右、下、左）{#四个值}
 
@@ -37,6 +38,7 @@ margin: 10px 20px 30px 40px; /* 上 右 下 左 */
 ```
 
 **视觉效果：**
+
 <div class="margin-demo">
   <div class="margin-box" style="margin: 10px 20px 30px 40px;">
     <div class="content">内容区域</div>
@@ -45,12 +47,12 @@ margin: 10px 20px 30px 40px; /* 上 右 下 左 */
 
 **值对应表：**
 
-| 方向 | 值 | 说明 |
-|------|-----|------|
-| 上边距 (margin-top) | 10px | 元素上方的外边距 |
-| 右边距 (margin-right) | 20px | 元素右侧的外边距 |
+| 方向                   | 值   | 说明             |
+| ---------------------- | ---- | ---------------- |
+| 上边距 (margin-top)    | 10px | 元素上方的外边距 |
+| 右边距 (margin-right)  | 20px | 元素右侧的外边距 |
 | 下边距 (margin-bottom) | 30px | 元素下方的外边距 |
-| 左边距 (margin-left) | 40px | 元素左侧的外边距 |
+| 左边距 (margin-left)   | 40px | 元素左侧的外边距 |
 
 ::: tip
 这是最完整的写法，明确指定了四个方向的不同值。当需要四个方向都有不同外边距时使用。
@@ -65,11 +67,13 @@ margin: 10px 20px 30px; /* 上 左右 下 */
 ```
 
 **等价于：**
+
 ```css
 margin: 10px 20px 30px 20px; /* 上 右 下 左 */
 ```
 
 **视觉效果：**
+
 <div class="margin-demo">
   <div class="margin-box" style="margin: 10px 20px 30px 20px;">
     <div class="content">内容区域</div>
@@ -78,11 +82,11 @@ margin: 10px 20px 30px 20px; /* 上 右 下 左 */
 
 **值对应表：**
 
-| 方向 | 值 | 说明 |
-|------|-----|------|
-| 上边距 (margin-top) | 10px | 元素上方的外边距 |
+| 方向                         | 值   | 说明                           |
+| ---------------------------- | ---- | ------------------------------ |
+| 上边距 (margin-top)          | 10px | 元素上方的外边距               |
 | 左右边距 (margin-right/left) | 20px | 元素左右两侧的外边距（相同值） |
-| 下边距 (margin-bottom) | 30px | 元素下方的外边距 |
+| 下边距 (margin-bottom)       | 30px | 元素下方的外边距               |
 
 ::: tip
 这种写法适合左右边距相同，但上下边距不同的情况。
@@ -97,11 +101,13 @@ margin: 10px 20px; /* 上下 左右 */
 ```
 
 **等价于：**
+
 ```css
 margin: 10px 20px 10px 20px; /* 上 右 下 左 */
 ```
 
 **视觉效果：**
+
 <div class="margin-demo">
   <div class="margin-box" style="margin: 10px 20px;">
     <div class="content">内容区域</div>
@@ -110,8 +116,8 @@ margin: 10px 20px 10px 20px; /* 上 右 下 左 */
 
 **值对应表：**
 
-| 方向 | 值 | 说明 |
-|------|-----|------|
+| 方向                         | 值   | 说明                           |
+| ---------------------------- | ---- | ------------------------------ |
 | 上下边距 (margin-top/bottom) | 10px | 元素上下两侧的外边距（相同值） |
 | 左右边距 (margin-right/left) | 20px | 元素左右两侧的外边距（相同值） |
 
@@ -128,11 +134,13 @@ margin: 10px; /* 四个方向相同 */
 ```
 
 **等价于：**
+
 ```css
 margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 ```
 
 **视觉效果：**
+
 <div class="margin-demo">
   <div class="margin-box" style="margin: 10px;">
     <div class="content">内容区域</div>
@@ -141,8 +149,8 @@ margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 
 **值对应表：**
 
-| 方向 | 值 | 说明 |
-|------|-----|------|
+| 方向         | 值   | 说明                           |
+| ------------ | ---- | ------------------------------ |
 | 四个方向边距 | 10px | 元素四个方向的外边距（相同值） |
 
 ::: tip
@@ -151,12 +159,12 @@ margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 
 ### 简写语法总结 {#简写语法总结}
 
-| 值数量 | 语法格式 | 应用方向 | 等价写法 | 适用场景 |
-|--------|----------|----------|----------|----------|
-| 4个值 | `margin: 上 右 下 左` | 分别指定四个方向 | - | 四个方向都需要不同值 |
-| 3个值 | `margin: 上 左右 下` | 上、左右、下 | `margin: 上 右 下 右` | 左右相同，上下不同 |
-| 2个值 | `margin: 上下 左右` | 上下、左右 | `margin: 上 右 上 右` | 上下相同，左右相同 |
-| 1个值 | `margin: 全部` | 四个方向 | `margin: 上 上 上 上` | 四个方向都相同 |
+| 值数量 | 语法格式              | 应用方向         | 等价写法              | 适用场景             |
+| ------ | --------------------- | ---------------- | --------------------- | -------------------- |
+| 4 个值 | `margin: 上 右 下 左` | 分别指定四个方向 | -                     | 四个方向都需要不同值 |
+| 3 个值 | `margin: 上 左右 下`  | 上、左右、下     | `margin: 上 右 下 右` | 左右相同，上下不同   |
+| 2 个值 | `margin: 上下 左右`   | 上下、左右       | `margin: 上 右 上 右` | 上下相同，左右相同   |
+| 1 个值 | `margin: 全部`        | 四个方向         | `margin: 上 上 上 上` | 四个方向都相同       |
 
 <style>
 .margin-demo {
@@ -181,43 +189,42 @@ margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 </style>
 
 ::: tip
-**记忆技巧**：margin的简写遵循"顺时针"原则，从上边距开始，按顺时针方向（上→右→下→左）设置值。当省略某个值时，会使用其对边的值。
+**记忆技巧**：margin 的简写遵循"顺时针"原则，从上边距开始，按顺时针方向（上 → 右 → 下 → 左）设置值。当省略某个值时，会使用其对边的值。
 :::
 
+## margin 负边距 {#margin 负边距}
 
-## margin负边距 {#margin负边距}
-> margin为 **正值** 时，元素在 **文档中所占位置** 是从border之外向四周 **扩展** 的，而为 **负值** 时，则是向内 **收缩** 的(图2)。
+> margin 为 **正值** 时，元素在 **文档中所占位置** 是从 border 之外向四周 **扩展** 的，而为 **负值** 时，则是向内 **收缩** 的(图 2)。
 
-1. 正值的时候，元素所占的位置向周围扩散了20px
-    ![图1](../assets/img/courses/margin/4853363-64d86bddf94d4790.png)
+1. 正值的时候，元素所占的位置向周围扩散了 20px
+   ![图1](../../assets/img/courses/margin/4853363-64d86bddf94d4790.png)
 
-2. 这是负值，可以看到，第二个元素实际 **所占的位置** 已经少了20px，反映在页面就是，元素2向左偏移了20px
-    ![图2](../assets/img/courses/margin/4853363-0160320a9ee70636.png)
+2. 这是负值，可以看到，第二个元素实际 **所占的位置** 已经少了 20px，反映在页面就是，元素 2 向左偏移了 20px
+   ![图2](../../assets/img/courses/margin/4853363-0160320a9ee70636.png)
 
-3. 当偏移大于自身宽度的时候，自身将不再 **占有位置** ，后续的元素会无视他（就当没有你这个兄弟！）（图3左负值，图4右负值）
-    ![图3](../assets/img/courses/margin/4853363-2536517dd8280403.png)
-    ![图4](../assets/img/courses/margin/4853363-ef74e3cc05c9944d.png)
+3. 当偏移大于自身宽度的时候，自身将不再 **占有位置** ，后续的元素会无视他（就当没有你这个兄弟！）（图 3 左负值，图 4 右负值）
+   ![图3](../../assets/img/courses/margin/4853363-2536517dd8280403.png)
+   ![图4](../../assets/img/courses/margin/4853363-ef74e3cc05c9944d.png)
 
 4. 但是，当元素没有固定宽度的时候（或者 **width:auto;**），负值会增加自身宽度！看图，两边露出来了！这是要逆天啊，有木有！
-    ![图5](../assets/img/courses/margin/4853363-13fd0d7e8cefdfd9.png)
+   ![图5](../../assets/img/courses/margin/4853363-13fd0d7e8cefdfd9.png)
 
-5. 仔细看就会发现，margin只是对元素在 **文档中所占的位置** 产生影响，**正值扩大**，**负值缩小**，记住这点，咱们就可以做很多有意思的东西。
-
-
+5. 仔细看就会发现，margin 只是对元素在 **文档中所占的位置** 产生影响，**正值扩大**，**负值缩小**，记住这点，咱们就可以做很多有意思的东西。
 
 ## 实例 {#实例}
 
-下面我们通过几个实际案例来展示margin负值的应用技巧。
+下面我们通过几个实际案例来展示 margin 负值的应用技巧。
 
 ### 1. 绝对定位垂直水平居中 {#绝对定位垂直水平居中}
 
-这是一个经典的居中布局技巧，通过绝对定位和margin负值实现元素的完美居中。
+这是一个经典的居中布局技巧，通过绝对定位和 margin 负值实现元素的完美居中。
 
-![图6](../assets/img/courses/margin/4853363-bc162a435c5bd782.png)
+![图6](../../assets/img/courses/margin/4853363-bc162a435c5bd782.png)
 
 **实现原理：**
-- 给元素设置绝对定位，left和top分别为50%
-- 然后设置margin-top为负的高度的一半，margin-left为负的宽度的一半
+
+- 给元素设置绝对定位，left 和 top 分别为 50%
+- 然后设置 margin-top 为负的高度的一半，margin-left 为负的宽度的一半
 - 这样元素的中心点就会与父容器的中心点重合
 
 ```css
@@ -243,28 +250,29 @@ margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 
 ```html
 <body>
-    <div class="box">
-        <div class="con"></div>
-    </div>
+  <div class="box">
+    <div class="con"></div>
+  </div>
 </body>
 ```
 
 ::: tip
-这种方法需要知道元素的精确宽高，对于不确定宽高的元素，可以使用transform: translate(-50%, -50%)来替代。
+这种方法需要知道元素的精确宽高，对于不确定宽高的元素，可以使用 transform: translate(-50%, -50%)来替代。
 :::
 
-***
+---
 
 ### 2. 列表布局有边框 {#列表布局有边框}
 
-在列表布局中，当每个列表项都有边框时，边框会重叠导致变粗。使用margin负值可以解决这个问题。
+在列表布局中，当每个列表项都有边框时，边框会重叠导致变粗。使用 margin 负值可以解决这个问题。
 
-![图7](../assets/img/courses/margin/4853363-2085fb8d729a10d0.png)
+![图7](../../assets/img/courses/margin/4853363-2085fb8d729a10d0.png)
 
 **实现原理：**
-- 方法一：上左margin为-1px，配合父级padding上左为1px
-- 方法二：右下margin为-1px，配合父级padding-bottom为1px
-- 通过相对定位和z-index确保hover状态时完整显示
+
+- 方法一：上左 margin 为-1px，配合父级 padding 上左为 1px
+- 方法二：右下 margin 为-1px，配合父级 padding-bottom 为 1px
+- 通过相对定位和 z-index 确保 hover 状态时完整显示
 
 ```css
 <style type="text/css">
@@ -299,41 +307,42 @@ margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 
 ```html
 <body>
-    <div class="box">
-        <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-            <li>6</li>
-            <li>7</li>
-            <li>8</li>
-            <li>9</li>
-            <li>10</li>
-            <li>11</li>
-            <li>12</li>
-        </ul>
-    </div>
+  <div class="box">
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+      <li>11</li>
+      <li>12</li>
+    </ul>
+  </div>
 </body>
 ```
 
 ::: tip
-这种方法可以避免边框重叠问题，同时保持列表项之间的间距一致。hover时提高z-index可以确保当前项完整显示。
+这种方法可以避免边框重叠问题，同时保持列表项之间的间距一致。hover 时提高 z-index 可以确保当前项完整显示。
 :::
 
-***
+---
 
 ### 3. 有间距的列表 {#有间距的列表}
 
-在网格布局中，我们经常需要在列表项之间添加间距，同时保持每行的对齐。margin负值可以完美解决这个问题。
+在网格布局中，我们经常需要在列表项之间添加间距，同时保持每行的对齐。margin 负值可以完美解决这个问题。
 
-![图8](../assets/img/courses/margin/4853363-9368ba82b800243e.png)
+![图8](../../assets/img/courses/margin/4853363-9368ba82b800243e.png)
 
 **实现原理：**
-- 利用margin负值的特性：当元素没有固定宽度时（width:auto），负值会增加自身宽度
-- 给ul设置margin-right为负的间距值，抵消最后一个li的右边距
-- 每个li设置右下边距，实现间距效果
+
+- 利用 margin 负值的特性：当元素没有固定宽度时（width:auto），负值会增加自身宽度
+- 给 ul 设置 margin-right 为负的间距值，抵消最后一个 li 的右边距
+- 每个 li 设置右下边距，实现间距效果
 
 ```css
 <style type="text/css">
@@ -363,40 +372,41 @@ margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 ```html
 <body>
   <div class="box">
-      <ul>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>5</li>
-          <li>6</li>
-          <li>7</li>
-          <li>8</li>
-          <li>9</li>
-          <li>10</li>
-          <li>11</li>
-          <li>12</li>
-      </ul>
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+      <li>11</li>
+      <li>12</li>
+    </ul>
   </div>
 </body>
 ```
 
 ::: tip
-这种方法的优点是无需计算每行最后一个元素的特殊样式，通过负margin自动抵消多余的间距，使布局更加灵活。
+这种方法的优点是无需计算每行最后一个元素的特殊样式，通过负 margin 自动抵消多余的间距，使布局更加灵活。
 :::
 
-***
+---
 
 ### 4. 右边固定左边自适应布局 {#右边固定左边自适应布局}
 
-在两栏布局中，经常需要一侧固定宽度，另一侧自适应剩余空间。使用margin负值可以实现这种布局。
+在两栏布局中，经常需要一侧固定宽度，另一侧自适应剩余空间。使用 margin 负值可以实现这种布局。
 
-![图9](../assets/img/courses/margin/4853363-bed8e40a453b41bb.png)
+![图9](../../assets/img/courses/margin/4853363-bed8e40a453b41bb.png)
 
 **实现原理：**
-- 左边盒子添加父级，宽度100%、左浮动
-- 左边内容设置margin-right为右边盒子的宽度
-- 右边盒子固定宽度、左浮动，margin-left为负的自身宽度
+
+- 左边盒子添加父级，宽度 100%、左浮动
+- 左边内容设置 margin-right 为右边盒子的宽度
+- 右边盒子固定宽度、左浮动，margin-left 为负的自身宽度
 - 当外层宽度变化时，左边盒子会自适应变化
 
 ```css
@@ -432,10 +442,10 @@ margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 ```html
 <body>
   <div class="box">
-      <div class="left_par">
-          <div class="left">内容 ... 内容</div>
-      </div>
-      <div class="right">头像</div>
+    <div class="left_par">
+      <div class="left">内容 ... 内容</div>
+    </div>
+    <div class="right">头像</div>
   </div>
 </body>
 ```
@@ -444,19 +454,20 @@ margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 这种布局方式的优点是结构清晰，兼容性好，可以轻松实现左侧自适应、右侧固定的效果。
 :::
 
-***
+---
 
 ### 5. 等高列布局 {#等高列布局}
 
-在多栏布局中，让各列高度相等是一个常见需求。使用margin负值可以巧妙实现等高效果。
+在多栏布局中，让各列高度相等是一个常见需求。使用 margin 负值可以巧妙实现等高效果。
 
-![图10](../assets/img/courses/margin/4853363-a5353cbf79fffa48.png)
+![图10](../../assets/img/courses/margin/4853363-a5353cbf79fffa48.png)
 
 **实现原理：**
-- 利用margin的特性：margin只对元素在文档中所占的位置产生影响
-- 给每列设置一个很大的padding-bottom值，增加背景高度
-- 同时设置等大的负margin-bottom值，将元素占位收缩回去
-- 父容器设置overflow:hidden，隐藏超出部分
+
+- 利用 margin 的特性：margin 只对元素在文档中所占的位置产生影响
+- 给每列设置一个很大的 padding-bottom 值，增加背景高度
+- 同时设置等大的负 margin-bottom 值，将元素占位收缩回去
+- 父容器设置 overflow:hidden，隐藏超出部分
 
 ```css
 <style type="text/css">
@@ -486,31 +497,30 @@ margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 ```html
 <body>
   <div class="box">
-      <div id="left" class="list">
-          <p>左侧内容</p>
-          <p>左侧内容</p>
-          <p>左侧内容</p>
-          <p>左侧内容</p>
-          <p>左侧内容</p>
-          <p>左侧内容</p>
-      </div>
-      <div id="content" class="list">
-          <p>中间内容</p>
-      </div>
-      <div id="right" class="list">
-          <p>右侧内容</p>
-      </div>
+    <div id="left" class="list">
+      <p>左侧内容</p>
+      <p>左侧内容</p>
+      <p>左侧内容</p>
+      <p>左侧内容</p>
+      <p>左侧内容</p>
+      <p>左侧内容</p>
+    </div>
+    <div id="content" class="list">
+      <p>中间内容</p>
+    </div>
+    <div id="right" class="list">
+      <p>右侧内容</p>
+    </div>
   </div>
 </body>
 ```
 
 ::: tip
-这种方法的优点是无需JavaScript，纯CSS实现，兼容性好。但要注意，如果列内容过多，可能会被截断。
+这种方法的优点是无需 JavaScript，纯 CSS 实现，兼容性好。但要注意，如果列内容过多，可能会被截断。
 :::
 
-*************************
+---
 
 > 先这么多，待续...
 
-
-_有不明白的可以留言☺_
+_有不明白的可以留言 ☺_
