docs(courses): 修正css文档中的锚点标识符
将中文锚点标识符改为英文标识符，提高文档的可读性和兼容性

--- a/docs/courses/4.css属性/2.margin负值详解.md
+++ b/docs/courses/4.css属性/2.margin负值详解.md
@@ -14,7 +14,7 @@ date: 2024-11-06 21:07:23
 
 > **margin（外边距）**：CSS 盒模型中的重要组成部分，控制元素边框与其他元素之间的空间距离。理解 margin 的工作原理是掌握 CSS 布局的基础。
 
-### margin 的四个方向 {#margin 的四个方向}
+### margin 的四个方向 {#margin-directions}
 
 CSS 允许我们分别控制元素四个方向的外边距：
 
@@ -25,7 +25,7 @@ CSS 允许我们分别控制元素四个方向的外边距：
 | 左边距 | `margin-left`   | 控制元素左侧的空间距离 |
 | 右边距 | `margin-right`  | 控制元素右侧的空间距离 |
 
-### margin 的简写语法 {#margin 的简写语法}
+### margin 的简写语法 {#margin-shorthand}
 
 为了提高代码效率，CSS 提供了 margin 的简写语法。根据提供的值数量不同，应用规则也不同。下面我们详细介绍四种简写方式：
 
@@ -192,7 +192,7 @@ margin: 10px 10px 10px 10px; /* 上 右 下 左 */
 **记忆技巧**：margin 的简写遵循"顺时针"原则，从上边距开始，按顺时针方向（上 → 右 → 下 → 左）设置值。当省略某个值时，会使用其对边的值。
 :::
 
-## margin 负边距 {#margin 负边距}
+## margin 负边距 {#margin-negative-value}
 
 > margin 为 **正值** 时，元素在 **文档中所占位置** 是从 border 之外向四周 **扩展** 的，而为 **负值** 时，则是向内 **收缩** 的(图 2)。
 
