docs(courses): 修复Promise文档中的事件循环链接路径
更新Promise文档中指向事件循环章节的链接路径，确保文档间正确跳转

--- a/docs/courses/3.Promise/2.实现Promise.md
+++ b/docs/courses/3.Promise/2.实现Promise.md
@@ -185,7 +185,7 @@ class MyPromise {
 }
 ```
 ::: tip 注意：
-ES6的 Promise，状态吸收是放在微队列里的，使用`queueMicrotask`方法可以把任务添加到[微队列](../1.事件循环#微队列)里去执行。
+ES6的 Promise，状态吸收是放在微队列里的，使用`queueMicrotask`方法可以把任务添加到[微队列](../1.事件循环/2.事件循环#微队列)里去执行。
 ```javascript
 queueMicrotask(() => {
   x.then(
@@ -393,7 +393,7 @@ flowchart TB
   - 在 `promise` 执行结束前，`onRejected` 不可被调用。
   - 调用次数不能超过一次。
 
-在 `Promise/A+` 规范中，要确保 `onFulfilled` 和 `onRejected` 方法异步执行，且应该在 `then` 方法被调用的那一轮[事件循环](../1.事件循环)之后的新执行栈中执行。这个事件队列可以采用“宏队列（`macro-task`）”机制或者“微队列（`micro-task`）”机制来实现。而在ES6中是放在了微队列，所以我们按照ES6的处理来实现。  
+在 `Promise/A+` 规范中，要确保 `onFulfilled` 和 `onRejected` 方法异步执行，且应该在 `then` 方法被调用的那一轮[事件循环](../1.事件循环/2.事件循环)之后的新执行栈中执行。这个事件队列可以采用"宏队列（`macro-task`）"机制或者"微队列（`micro-task`）"机制来实现。而在ES6中是放在了微队列，所以我们按照ES6的处理来实现。  
 ```javascript
 // 处理已决后的回调函数
 // 将 curPromise 中的所有回调进行处理
