docs(Promise): 添加async/await面试题示例和状态吸收面试题
添加两个Promise相关的面试题示例，包括状态吸收面试题和async/await执行顺序面试题，并完善代码运行步骤说明

--- a/docs/courses/3.Promise/5.一些面试题.md
+++ b/docs/courses/3.Promise/5.一些面试题.md
@@ -5,7 +5,7 @@ title: 一些Promise的面试题
 
 # 一些 Promise 的面试题
 
-测试模拟器
+## 状态吸收面试题{#状态吸收面试题}
 
 ```javascript codeRunTask
 ---
@@ -25,6 +25,7 @@ data: {
       console: "",
       runTime: 2000
     },
+
     {
       id: 2,
       type: "synchronous",
@@ -208,4 +209,257 @@ promise1.then(() => {
   .then(() => {
     console.log(6);
   });
+```
+
+## async/await 面试题{#async-await-面试题}
+
+```javascript codeRunTask
+---
+data: {
+  config: {
+
+  },
+  runSteps: [
+    {
+      id: 1,
+      type: "synchronous",
+      task: "声明函数async1",
+      taskName: "声明函数:async1",
+      createTask: {},
+      codeNumbers: [1,2,3,4,5],
+      result: "声明函数 **async1**,未执行,直接跳过",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 2,
+      type: "synchronous",
+      task: "声明函数async2",
+      taskName: "声明函数:async2",
+      createTask: {},
+      codeNumbers: [7,8,9,10,11,12,13,14],
+      result: "声明函数 **async2**,未执行,直接跳过",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 3,
+      type: "synchronous",
+      task: "声明函数async3",
+      taskName: "声明函数:async3",
+      createTask: {},
+      codeNumbers: [16,17,18,19,20],
+      result: "声明函数 **async3**,未执行,直接跳过",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 4,
+      type: "synchronous",
+      task: "执行全局第一个console.log",
+      taskName: "log(6)",
+      createTask: {},
+      codeNumbers: [22],
+      result: "这是第一个同步执行的代码，直接输出到控制台<br>输出结果: 6",
+      console: "6",
+      runTime: 2000
+    },
+    {
+      id: 5,
+      type: "synchronous",
+      task: "调用async1函数",
+      taskName: "async1()",
+      createTask: {},
+      codeNumbers: [23],
+      result: "调用 **async1** 函数，进入函数执行<br>async1是一个async函数，返回一个Promise",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 6,
+      type: "synchronous",
+      task: "async1函数内输出",
+      taskName: "async1-log(1)",
+      createTask: {},
+      codeNumbers: [2],
+      result: "执行 **async1** 函数内的第一行代码`console.log(1);`,这是同步代码，立即执行<br>输出结果: 1",
+      console: "1",
+      runTime: 2000
+    },
+    {
+      id: 7,
+      type: "synchronous",
+      task: "调用async2函数",
+      taskName: "await async2()",
+      createTask: {},
+      codeNumbers: [3],
+      result: "遇到 **await async2()**，调用 `async2` 函数<br>`await`会暂停`async1`函数的执行，等待`async2`返回的**Promise**解决",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 8,
+      type: "synchronous",
+      task: "async2函数内执行setTimeout",
+      taskName: "setTimeout(延时回调,0)",
+      createTask: {
+        type: "timer",
+        taskId: 17,
+      },
+      codeNumbers: [8,9,10,11,12,13],
+      result: "在 `async2` 函数中遇到 `await setTimeout`,执行`setTimeout(延时回调,0)`,返回一个延时器id<br>setTimeout是一个宏任务，0秒后把回调放入延时队列<br>创建任务 `setTimeout回调` 到延时队列",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 9,
+      type: "synchronous",
+      task: "async2函数内await等待setTimeout(延时回调,0)完成",
+      taskName: "await setTimeout()",
+      createTask: {
+        type: "microtask",
+        taskId: 14,
+      },
+      codeNumbers: [8,9,10,11,12,13],
+      result: "await等待的一定是一个Promise,所以会包装成`await Promise.resolve(延时器id)`,`Promise.resolve(延时器id)`已经完成,把后续代码推入微队列,如果没有后续,这把函数执行结束推到微队列<br>创建任务 `async2执行结束` 到微队列",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 10,
+      type: "synchronous",
+      task: "async2执行完毕,回到async1",
+      taskName: "回到async1内",
+      createTask: {},
+      codeNumbers: [3],
+      result: "async2返回的promise还未完成,还在微队列:`async2执行结束`,继续等待,`async1`运行结束，继续后续同步代码",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 11,
+      type: "synchronous",
+      task: "执行全局第二个console.log",
+      taskName: "log(7)",
+      createTask: {},
+      codeNumbers: [24],
+      result: "这是一个同步执行的代码，直接输出到控制台<br>输出结果: 7",
+      console: "7",
+      runTime: 2000
+    },
+    {
+      id: 12,
+      type: "synchronous",
+      task: "调用async3函数",
+      taskName: "async3()",
+      createTask: {
+        type: "microtask",
+        taskId: 15,
+      },
+      codeNumbers: [25],
+      result: "调用 `async3` 函数,`async3`是一个async函数，返回一个Promise<br>在async3函数中，Promise.resolve().then回调会被放入微任务队列<br>创建任务 `async3-log(5)` 到微队列",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 13,
+      type: "synchronous",
+      task: "执行全局第三个console.log",
+      taskName: "log(8)",
+      createTask: {},
+      codeNumbers: [26],
+      result: "这是一个同步执行的代码，直接输出到控制台，执行完毕后，同步代码执行结束<br>输出结果: 7",
+      console: "8",
+      runTime: 2000
+    },
+    {
+      id: 14,
+      type: "microtask",
+      task: "执行微任务：async2执行结束",
+      taskName: "async2执行结束",
+      createTask: {
+        type: "microtask",
+        taskId: 16,
+      },
+      codeNumbers: [6],
+      result: "执行微任务队列中的 `async2执行结束`,async2函数执行完毕，返回一个已解决的Promise,async1继续执行，把`console.log(2);`放入微任务队列<br>创建任务 `async1-log(2)` 到微队列",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 15,
+      type: "microtask",
+      task: "执行微任务：async3-log(5)",
+      taskName: "async3-log(5)",
+      createTask: {},
+      codeNumbers: [18],
+      result: "执行微任务队列中的 **async3-log(5)**，async3函数执行完毕，返回一个已解决的Promise<br>输出结果： 5",
+      console: "5",
+      runTime: 2000
+    },
+    {
+      id: 16,
+      type: "microtask",
+      task: "执行微任务：async1-log(2)",
+      taskName: "async1-log(2)",
+      createTask: {},
+      codeNumbers: [4],
+      result: "执行微任务队列中的 `async1-log(2)`，<br>输出结果： 2",
+      console: "2",
+      runTime: 2000
+    },
+    {
+      id: 17,
+      type: "timer",
+      task: "执行延时任务：setTimeout回调",
+      taskName: "setTimeout回调",
+      createTask: {
+        type: "microtask",
+        taskId: 18,
+      },
+      codeNumbers: [9,10,11,12],
+      result: "执行延时任务队列中的 `setTimeout回调`，唯一一个被放入宏任务队列的任务<br>，Promise.resolve().then回调会被放入微任务队列<br>创建任务 `async2-timeout-log(3)` 到微队列<br>执行后续代码`console.log(4);`<br>输出结果： 4",
+      console: "4",
+      runTime: 2000
+    },
+    {
+      id: 18,
+      type: "microtask",
+      task: "执行微任务：async2-timeout-log(3)",
+      taskName: "async2-timeout-log(3)",
+      createTask: {},
+      codeNumbers: [9],
+      result: "执行微任务队列中的 **async2-timeout-log(3)**微队列清空，所有任务执行完毕<br>输出结果： 3",
+      console: "3",
+      runTime: 2000
+    }
+  ]
+}
+---
+async function async1() {
+  console.log(1);
+  await async2();
+  console.log(2);
+}
+
+const async2 = async () => {
+  await setTimeout(() => {
+    Promise.resolve().then(() => {
+      console.log(3);
+    });
+    console.log(4);
+  }, 0);
+}
+
+const async3 = async () => {
+  Promise.resolve().then(() => {
+    console.log(5);
+  });
+}
+
+console.log(6);
+async1();
+console.log(7);
+async3();
+console.log(8);
 ```
