docs(courses): 更新Promise面试题文档标题格式
简化文档中的章节标题，移除冗余的"面试题"字样，使标题更加简洁

--- a/docs/courses/3.Promise/5.一些面试题.md
+++ b/docs/courses/3.Promise/5.一些面试题.md
@@ -5,7 +5,7 @@ title: 一些Promise的面试题
 
 # 一些 Promise 的面试题
 
-## 状态吸收面试题{#状态吸收面试题}
+## 状态吸收{#状态吸收}
 
 ```javascript codeRunTask
 ---
@@ -211,7 +211,7 @@ promise1.then(() => {
   });
 ```
 
-## async/await 面试题{#async-await-面试题}
+## async/await{#async-await}
 
 ```javascript codeRunTask
 ---
