docs(courses): 修正Promise文档中的标题锚点格式
将文档中标题的锚点格式从包含空格的格式改为使用连字符连接，提高URL兼容性

--- a/docs/courses/3.Promise/2.实现Promise.md
+++ b/docs/courses/3.Promise/2.实现Promise.md
@@ -6,7 +6,7 @@ date: 2025-09-27 22:34:33
 
 # 手写 Promise
 
-## Promise 基本结构 {#Promise 基本结构}
+## Promise 基本结构 {#Promise-基本结构}
 
 Promise 的基本结构如下：
 
@@ -25,7 +25,7 @@ class MyPromise {
 }
 ```
 
-## Promise 状态 {#Promise 状态}
+## Promise 状态 {#Promise-状态}
 
 一个 Promise 的当前状态必须为以下三种状态中的一种：
 
@@ -60,7 +60,7 @@ class MyPromise {
 }
 ```
 
-## Promise 拒绝 {#Promise 拒绝}
+## Promise 拒绝 {#Promise-拒绝}
 
 reject 方法用于改变 Promise 的状态为失败，并传入一个失败的原因。
 处于拒绝态时，promise 需满足以下条件：
@@ -88,7 +88,7 @@ class MyPromise {
 }
 ```
 
-## Promise 成功 {#Promise 成功}
+## Promise 成功 {#Promise-成功}
 
 resolve 方法用于改变 Promise 的状态为成功，并传入一个成功的结果。  
 处于成功态时，promise 需满足以下条件：
@@ -211,7 +211,7 @@ queueMicrotask(() => {
 
 :::
 
-## then 方法 {#then 方法}
+## then 方法 {#then-方法}
 
 `then` 方法接收两个参数，第一个参数是`fulfilled`状态的回调，第二个参数是`rejected`状态的回调：
 
